# GAMSlinks

./: .gitattributes  .gitignore  AUTHORS  Dependencies  Externals  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  bonmin.patch  cbc.patch  cgl.patch  clp.patch  coinutils.patch  configure  configure.ac  couenne.patch  cppad.patch  fixMakefile.inForWindows  gamsinst.py  gamsuninst.py  ipopt.patch  makefiles.patch  os.patch  osiglpk.patch  osispx.patch
GAMSlinks/: INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.ac  gams_addlibs.txt.in  gamsio_addlibs.txt.in  smagio_addlibs.txt.in
GAMSlinks/doc/gamsdist/: bonmin.bbl  bonmin.tex  cbc.tex  coin.tex  coin_scip.bib  coinlibd.bib  couenne.bbl  couenne.tex  gams.sty  ind_coin.tex  ind_coinlibd.tex  ind_scip.tex  ipopt.bbl  ipopt.tex  optbonmin_a.tex  optbonmin_s.tex  optcbc_a.tex  optcbc_s.tex  optcouenne_a.tex  optglpk_a.tex  optglpk_s.tex  optipopt_a.tex  optosd_a.tex  optscip_a.tex  os.bbl  os.tex  osi.tex  scip.bbl  scip.tex
GAMSlinks/doc/optdoc/: Makefile.am  Makefile.in  optdoc.cpp
GAMSlinks/examples/adbench/: Makefile.am  Makefile.in  adbench.cpp  gmsad_nt.cmd  gmsad_us.run
GAMSlinks/examples/osil2gms/: Makefile.am  Makefile.in  osil2gms.cpp  osrl2trace.cpp
GAMSlinks/inc/: config_gamslinks.h.in
GAMSlinks/m4/: ac_coin_gams.m4  ac_coin_scip.m4  ac_coin_soplex.m4
GAMSlinks/src/: GAMSlinksConfig.h  Makefile.am  Makefile.in  config.h.in  config_gamslinks.h.in
GAMSlinks/src/Bonmin/: GamsBonmin.cpp  Makefile.am  Makefile.in  SmagMINLP.cpp  SmagMINLP.hpp  SmagMessageHandler.cpp  SmagMessageHandler.hpp  gmsbm_nt.cmd  gmsbm_us.run
GAMSlinks/src/Cbc/: CbcStrategyGams.cpp  CbcStrategyGams.hpp  GamsCoinCbc.cpp  GamsCutGenerator.cpp  GamsCutGenerator.hpp  GamsHeuristic.cpp  GamsHeuristic.hpp  Makefile.am  Makefile.in  gmscc_nt.cmd  gmscc_us.run  optcbc.def  optcbc.gms  optcbc.html  optcbc.txt
GAMSlinks/src/GamsIO/: GamsBCH.cpp  GamsBCH.hpp  GamsDictionary.cpp  GamsDictionary.hpp  GamsDictionary2.cpp  GamsDictionary2.hpp  GamsFinalize.cpp  GamsFinalize.hpp  GamsGDX.cpp  GamsGDX.hpp  GamsHandler.hpp  GamsHandlerGmo.cpp  GamsHandlerGmo.hpp  GamsHandlerIOLib.cpp  GamsHandlerIOLib.hpp  GamsHandlerSmag.cpp  GamsHandlerSmag.hpp  GamsMessageHandler.cpp  GamsMessageHandler.hpp  GamsModel.cpp  GamsModel.hpp  GamsNLinstr.c  GamsNLinstr.h  GamsOptions.cpp  GamsOptions.hpp  Makefile.am  Makefile.in  SmagExtra.c  SmagExtra.h  SmagJournal.cpp  SmagJournal.hpp  SmagMessageHandler.hpp  SmagStricmp.c  gamsio_addlibs.txt.in
GAMSlinks/src/GamsUtils/: GamsBBTrace.c  GamsBBTrace.h  GamsCompatibility.h  GamsDictionary.cpp  GamsDictionary.hpp  GamsEntryPoints_tpl.c  GamsGDX.cpp  GamsGDX.hpp  GamsHelper.h  GamsLibLoader.c  GamsLibLoader.h  GamsLicensing.c  GamsLicensing.h  GamsNLinstr.c  GamsNLinstr.h  GamsOptions.cpp  GamsOptions.hpp  GamsSolveTrace.c  GamsSolveTrace.h  Makefile.am  Makefile.in  gdxcc.c  gdxcc.h  gevmcc.c  gevmcc.h  gmomcc.c  gmomcc.h  optcc.c  optcc.h
GAMSlinks/src/Glpk/: GamsCoinGlpk.cpp  Makefile.am  Makefile.in  gmscg_nt.cmd  gmscg_us.run  optcoinglpk.c  optcoinglpk.h  optglpk.def  optglpk.gms  optglpk.html  optglpk.txt
GAMSlinks/src/Ipopt/: GamsIpopt.cpp  Makefile.am  Makefile.in  SMAGNLP.cpp  SMAGNLP.hpp  SmagJournal.cpp  SmagJournal.hpp  SmagNLP.cpp  SmagNLP.hpp  gmsip_nt.cmd  gmsip_us.run
GAMSlinks/src/OS/: GMO2OSiL.cpp  GMO2OSiL.hpp  GMOSolver.cpp  GMOSolver.hpp  GamsOS.cpp  GamsOS2.cpp  GamsOS2.hpp  GamsOSmain.cpp  Makefile.am  Makefile.in  OSrL2GMO.cpp  OSrL2GMO.hpp  OSrL2Smag.cpp  (+8 more)
GAMSlinks/test/: Makefile.am  Makefile.in  adbench.cpp  run_gmstest.in  run_quality.in  run_tests.in
GamsUtils/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
GamsUtils/inc/: config_gamslinks.h.in
GamsUtils/m4/: ac_coin_gams.m4
GamsUtils/src/: GAMSlinksConfig.h
LinearSolverLoader/: Makefile.am  Makefile.in  README  configure  configure.ac
LinearSolverLoader/inc/: config_linearsolverloader.h.in
LinearSolverLoader/src/: HSLLoader.c  HSLLoader.h  LibraryHandler.c  LibraryHandler.h  LinearSolverLoaderConfig.h  Makefile.am  Makefile.in  PardisoLoader.c  PardisoLoader.h
doc/optdoc/: Makefile.am  Makefile.in  optdoc.cpp
libltdl/: Makefile.am  Makefile.in  configure  configure.ac  ltdl.c
src/: GAMSlinksConfig.h  Makefile.am  Makefile.in  config.h.in  gamsconfig.yaml.in  gamsinst.sh.in  install-gamsconfig.py
src/GamsUtils/: GamsEntryPoints_tpl.c  GamsHelper.c  Makefile.am  Makefile.in
src/SolverInterfaces/: GamsBonmin.cpp  GamsCbc.hpp  GamsIpopt.cpp  GamsMessageHandler.hpp  GamsNLP.cpp  Makefile.am  Makefile.in  optmycbc.def
src/amplsolver/: Makefile.am  Makefile.in  amplsolver.c  convert_nl.c  convert_nl.h  gamsnl.h  optamplsolver.cpp
src/bonmin/: GamsBonmin.cpp  GamsBonmin.hpp  GamsMINLP.cpp  GamsMINLP.hpp  GamsNLP.cpp  GamsNLP.hpp  Makefile.am  Makefile.in  optbonmin.cpp
src/cbc/: GamsCbc.cpp  GamsCbc.hpp  GamsCbcHeurSolveTrace.hpp  Makefile.am  Makefile.in  optcbc.cpp
src/couenne/: GamsCouenne.cpp  GamsCouenne.hpp  Makefile.am  Makefile.in  optcouenne.cpp
src/highs/: GamsHighs.cpp  Makefile.am  Makefile.in  opthighs.cpp
src/ipopt/: GamsIpopt.cpp  GamsIpopt.hpp  GamsJournal.cpp  GamsJournal.hpp  GamsNLP.cpp  GamsNLP.hpp  Makefile.am  Makefile.in  optipopt.cpp
src/osi/: GamsMessageHandler.cpp  GamsMessageHandler.hpp  GamsOsi.cpp  GamsOsi.hpp  GamsOsiHelper.cpp  GamsOsiHelper.hpp  Makefile.am  Makefile.in
src/scip/: GamsScip.cpp  GamsScip.hpp  Makefile.am  Makefile.in  event_solvetrace.c  event_solvetrace.h  optscip.cpp  prop_defaultbounds.c  prop_defaultbounds.h  reader_gmo.c  reader_gmo.h
src/soplex/: GamsSoPlex.cpp  GamsSoPlex.hpp  Makefile.am  Makefile.in  optsoplex.cpp
src/utils/: GamsEntryPoints_tpl.c  GamsHelper.c  GamsHelper.h  GamsLicensing.c  GamsLicensing.h  GamsLinksConfig.h  GamsNL.c  GamsNL.h  GamsNLinstr.h  GamsOptionsSpecWriter.cpp  GamsOptionsSpecWriter.hpp  GamsSolveTrace.c  GamsSolveTrace.h  Makefile.in  Makefile_gamsapi.inc  config.h.in  def.h  gamsnl.c
test/: Makefile.am  Makefile.in  run_gmstest.in  run_quality.in
(+255 files in other folders)
